--- a/clusters/kubecit-service/kubecit-service-policy.yaml
+++ b/clusters/kubecit-service/kubecit-service-policy.yaml
@@ -1,12 +1,14 @@
----
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImagePolicy
 metadata:
   name: kubecit-service
   namespace: flux-system
 spec:
+  filterTags:
+    extract: $ts
+    pattern: ^(?P<ts>[0-9]+)-[a-z0-9]+
   imageRepositoryRef:
     name: kubecit-service
   policy:
-    semver:
-      range: '>=1.0.0'
+    numerical:
+      order: asc
